# lcd-gui-tester

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE.txt  README.md  create_dummy_image.py
.github/workflows/: macos-arm-deploy.yml_  macos-deploy.yml  macos-deploy.yml_  ubuntu-deploy-debug.yml  ubuntu-deploy.yml  windows-deploy-debug.yml  windows-deploy.yml
instructions/: instructions.md
nrf52_configure_scripts/: README.md  configure.bat  configure.ps1  configure.sh  toolchain-arm-none-eabi.cmake
src/: embeddedpython.cpp  embeddedpython.h  imagedropwidget.cpp  imagedropwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  librarychecker.cpp  librarychecker.h  lvglscriptrunner.cpp  lvglscriptrunner.h  main.cpp  mainwindow.cpp  mainwindow.h  startupchecker.cpp  startupchecker.h
